--- a/ITRadioFrontendVue/ITRadioFrontend/package.json
+++ b/ITRadioFrontendVue/ITRadioFrontend/package.json
@@ -14,6 +14,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "howler": "^2.2.4",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
